# Nethack-Roguelike

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PATCH_MANIFEST.json  README.md  RoundNotes.md  SETTINGS.md  dungeon.cpp  dungeon.hpp  game.hpp  game_loop.cpp  main.cpp  procrogue-env.ps1  procrogue-test.ps1  procrogue.bat  render.cpp  vcpkg.json
Nethack-Roguelike-upgraded/Nethack-Roguelike-main/: CMakeLists.txt  CMakePresets.json  LICENSE
Nethack-Roguelike-upgraded/Nethack-Roguelike-main/docs/: BUILDING.md
Nethack-Roguelike-upgraded/Nethack-Roguelike-main/src/: dungeon.cpp  game.hpp  items.cpp  items.hpp  main.cpp  render.hpp  spritegen.cpp
cmake/scripts/: unlock_binary.cmake
cmake/toolchains/: msvc-md.cmake  msvc-mt.cmake
docs/: 3D_TURNTABLE_PREVIEW.md  ANIMATION.md  BUILDING.md  CORROSION_GEAR_AND_DOORS.md  ELECTRIC_CONDUCTION.md  HEARING_PREVIEW.md  IDENTIFICATION.md  ISO_TERRAIN_VOXELS.md  MONSTER_TORCHES.md  MORALE_SHOCK.md  PARTICLES.md  PROCEDURAL_ANIMATION.md  PROCGEN_ANNEX_FRACTAL.md  PROCGEN_ANNEX_WFC.md  PROCGEN_CAVERN_METABALLS.md  PROCGEN_COLOR_PALETTE.md  PROCGEN_ECOSYSTEM_CRAFTING_CATALYSTS.md  PROCGEN_ECOSYSTEM_GUARDIANS.md  PROCGEN_ECOSYSTEM_HAZARDS_AND_AMBIENCE.md  PROCGEN_ECOSYSTEM_LOOT_ECOLOGY.md  PROCGEN_ECOSYSTEM_MICROCLIMATES.md  PROCGEN_ECOSYSTEM_PULSES.md  PROCGEN_ECOSYSTEM_RESOURCE_NODES.md  PROCGEN_ECOSYSTEM_SIGILS.md  PROCGEN_ECOSYSTEM_SPAWN_ECOLOGY.md  PROCGEN_ECOSYSTEM_STEALTH_ECOLOGY.md  PROCGEN_GRAFFITI_RUMORS.md  PROCGEN_IDENT_APPEARANCES.md  PROCGEN_ITEM_HOOKS.md  PROCGEN_LEYLINES.md  PROCGEN_MAZE_WILSON.md  PROCGEN_OVERWORLD_ATLAS.md  PROCGEN_OVERWORLD_BROOKS.md  PROCGEN_OVERWORLD_CLIMATE.md  PROCGEN_OVERWORLD_GATES.md  PROCGEN_OVERWORLD_RIVERS.md  PROCGEN_OVERWORLD_SPRINGS.md  PROCGEN_OVERWORLD_STRONGHOLDS.md  PROCGEN_OVERWORLD_TECTONICS.md  PROCGEN_OVERWORLD_TRAILS.md  (+28 more)
src/: action_info.hpp  ai.cpp  artifact_gen.hpp  bounty_gen.hpp  butcher_gen.hpp  combat.cpp  combat_rules.cpp  combat_rules.hpp  common.hpp  content.cpp  content.hpp  corridor_braid.cpp  corridor_braid.hpp  craft_tags.hpp  crafting_gen.hpp  dungeon.cpp  dungeon.hpp  ecosystem_loot.hpp  effects.hpp  farm_gen.hpp  fishing_gen.hpp  game.cpp  game.hpp  game_automove.cpp  game_farming.cpp  game_interact.cpp  game_internal.hpp  game_inventory.cpp  game_look.cpp  game_loop.cpp  game_markers.cpp  game_save.cpp  game_spawn.cpp  game_spellcasting.cpp  game_targeting.cpp  game_world.cpp  graffiti_gen.hpp  grid_utils.hpp  hallucination.hpp  headless_main.cpp  (+61 more)
tests/: CMakeLists.txt  test_main.cpp
